# Capstone

./: .gitignore  README.md  app.py  model.py  pyproject.toml  render.yaml  requirements.txt
artifacts/: sentiment_pipeline.pkl  user_topk_sim.npz
notebooks/: recommender.ipynb
templates/: index.html
