[project]
name = "sentiment-based-product-recommendation"
version = "1.0.0.0"
description = "IIIT UPGRAD AI/ML Capstone Project by Uvaraj Thulasiram"
authors = [
    {name = "Uvaraj Thulasiram",email = "uvaraj.thulasiram@outlook.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wordcloud (>=1.9.4,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
